Prevent popup menu titles from wrapping when too close to the edge of the screen.

--- a/sidebar.css
+++ b/sidebar.css
@@ -113,6 +113,7 @@ div.menu .action {
   width:auto;
   text-align:left;
   cursor:default;
+  white-space: nowrap;
 }
 
 div.menu .action span {
@@ -466,6 +467,7 @@ div.menu.visible {
   width: 100%;
   height: 24px;
   box-sizing: border-box;
+  position: sticky;
   z-index: 1;
   background: var(--surface-color);
   top: calc(50px);
